[package]
name = "lib-gameboy-web"
version = "0.1.0"
authors = ["Ryan Levick <ryan.levick@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "^1.0.93", features = ["derive"] }
serde_derive = "^1.0.93"
console_error_panic_hook = "0.1.6"

[dependencies.lib-gameboy]
path = "../../common/lib-gameboy"
features = ["serialize"]

[dependencies.wasm-bindgen]
version = "0.2.47"
features = ["serde-serialize"]
