[package]
name = "rustdoku"
version = "0.1.0"
authors = ["Ryan Levick <ryan.levick@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3.24"
web-sys = { version = "0.3.24", features = ["Document", "Element", "EventTarget", "Node", "Text", "Window"] }
wasm-bindgen = "0.2.47"